--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install sphinx sphinx_rtd_theme recommonmark
+          pip install sphinx sphinx_rtd_theme recommonmark myst-parser
 
       - name: Build docs
         run: |
