--- a/.github/workflows/sphinx-docs.yml
+++ b/.github/workflows/sphinx-docs.yml
@@ -1,35 +1,43 @@
 name: Build and Deploy Sphinx Docs
 
+# 触发条件：每次 push 到 main 分支
 on:
   push:
     branches:
       - main
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ 拉取仓库代码
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # 2️⃣ 设置 Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
 
+      # 3️⃣ 安装 Sphinx 及扩展依赖
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install sphinx sphinx_rtd_theme recommonmark myst-parser
 
+      # 4️⃣ 构建 Sphinx 文档
       - name: Build docs
         run: |
           cd docs
-          make html
+          make html   # 输出到 docs/build/html
 
+      # 5️⃣ 部署到 GitHub Pages
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs/build/html
+          github_token: ${{ secrets.TJK_NOTEBOOKS }}    # 使用你在 Secrets 里添加的 token
+          publish_dir: ./docs/build/html         # 对应你的 build/html
+          user_name: "github-actions[bot]"
+          user_email: "github-actions[bot]@users.noreply.github.com"
